--- a/boxes.html
+++ b/boxes.html
@@ -16,13 +16,13 @@
   <header>
     <nav class="navbar navbar-expand navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="index.html">
           <img src="source/files/photo_logo.png" alt="Logo">
         </a>
         <div class="navbar-collapse">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="/">О нас</a>
+              <a class="nav-link active" href="index.html">О нас</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="boxes.html">Каталог</a>
